# ikSolver

./: .gitignore  CMakeLists.txt  LICENSE.md  readme.md
solver/: CMakeLists.txt
solver/include/: chain.hpp  joint.hpp  quaternion.hpp  solver.hpp  vector.hpp
solver/src/: chain.cpp  quaternion.cpp  solver.cpp  vector.cpp
visualizer/: CMakeLists.txt
visualizer/extlibs/: FindIrrlicht.cmake
visualizer/src/: main.cpp
